{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Keys",
            "id": "aa00e0a3-9971-4b97-9262-273f07864fe1",
            "actions": [
                {
                    "name": "PermanentAttachCamera",
                    "type": "Button",
                    "id": "df2a5f1d-541c-4cdc-8a9f-b95726598222",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TempAttachCamera",
                    "type": "Button",
                    "id": "7cb038e9-23f8-4444-be14-3ad852d998d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "960e37eb-45bb-4161-88fe-52e89710a8c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c0a6408-9dc0-4789-9cdd-1c5593d11953",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PermanentAttachCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc36c634-abc0-44cf-b1e7-885f22a67409",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TempAttachCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cba8bf01-f650-4086-be67-560c63845d5a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "0862236b-6e1d-4656-a013-0b9331232232",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "42c3dcdb-aaf5-4a30-a5bb-2d42219b86cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "1ad11f3b-62a2-43ac-ae9a-804d11c6e851",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7bc8a9c9-1f11-4e64-88be-158ae2473d0e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82833c24-6442-400f-b7ff-78f23d27fa68",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}